# yuuav_unet_ok

./: gen_dataset.py  unet_predict.py  unet_train.py
predict/: pre1.png.aux.xml  pre3.png.aux.xml
predict/untitled folder/: pre1.png.aux.xml  pre2.png.aux.xml  pre3.png.aux.xml
predict/untitled folder 2/: pre3.png.aux.xml
visualization/: CMakeLists.txt  visualization.cpp
